--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.1",
     "mocha": "^3.5.0",
+    "nock": "^9.0.14",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2"
   },
@@ -38,7 +39,8 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "morgan": "^1.8.2",
-    "nock": "^9.0.14",
+    "request": "^2.81.0",
+    "request-json": "^0.6.2",
     "url-parse": "^1.1.9",
     "urldecode": "^1.0.1",
     "valid-url": "^1.0.9"
