--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec --compilers ts:ts-node/register 'tests/**/*.test.ts'",
-    "start": "node dist/index.js"
+    "start": "nodemon -L dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "morgan": "^1.8.2",
+    "redis": "latest",
     "request": "^2.81.0",
     "request-json": "^0.6.2",
     "universal-analytics": "^0.4.15",
