--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^2.4.2"
   },
   "dependencies": {
+    "base64js": "^1.0.1",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "debug": "^2.6.8",
